[gd_scene load_steps=6 format=3 uid="uid://cqjdyr5vaolel"]

[ext_resource type="Script" path="res://scenes/models/uberhero/ModelSpline.gd" id="2_pdway"]
[ext_resource type="PackedScene" uid="uid://cor4hvqxhlwfr" path="res://scenes/components/gpu_spline/gpu_spline_bezier.tscn" id="2_tggkl"]
[ext_resource type="Shader" path="res://shaders/bezier_spline.gdshader" id="3_u7gdb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mymxy"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_u7gdb")
Color = null
PointA = Vector2(0.5, 0.5)
PointB = Vector2(0.5, 0.586257)
PointC = Vector2(0.5, 0.672513)
Smoothness = 0.2
Thickness = 0.93732

[sub_resource type="QuadMesh" id="QuadMesh_wlhby"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_mymxy")
size = Vector2(1.739, 1.739)

[node name="Body" type="SplineModel"]
script = ExtResource("2_pdway")
ModifyRotation = false

[node name="Spline" parent="." instance=ExtResource("2_tggkl")]
mesh = SubResource("QuadMesh_wlhby")
PointA = Vector2(0, 0)
PointB = Vector2(0, -0.15)
PointC = Vector2(0, -0.3)
Thickness = 1.63

[node name="Point0" type="Position3D" parent="."]

[node name="Point1" type="Position3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, 0)

[node name="Point2" type="Position3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.3, 0)
